--- a/src/index.css
+++ b/src/index.css
@@ -3009,3 +3009,12 @@ section.error-404 .page-content p { font-size: 18px; margin-bottom: 30px; }
 #map { display: block; height: 550px; width: 100%; }
 
 
+#bgImg {
+
+    background-image: url(./assets/images/slides/slider-mainbg-001.jpg);
+}
+
+#bgImg1 {
+    background-image: url(./assets/images/slides/slider-mainbg-002.jpg);
+
+}
